--- a/compose/env/magento.env
+++ b/compose/env/magento.env
@@ -1,9 +1,9 @@
-MAGENTO_ADMIN_EMAIL=john.smith@gmail.com
-MAGENTO_ADMIN_FIRST_NAME=john
-MAGENTO_ADMIN_LAST_NAME=smith
-MAGENTO_ADMIN_USER=john.smith
-MAGENTO_ADMIN_PASSWORD=password123
-MAGENTO_ADMIN_FRONTNAME=admin
+MAGENTO_ADMIN_EMAIL=shoppe.anysync@gmail.com
+MAGENTO_ADMIN_FIRST_NAME=xuefei
+MAGENTO_ADMIN_LAST_NAME=cao
+MAGENTO_ADMIN_USER=xuefei
+MAGENTO_ADMIN_PASSWORD=1eoJGTal71JdJtvN5Sh3gkWOh5Po9BekR88IY
+MAGENTO_ADMIN_FRONTNAME=oHUC3SDnvZiEjkPZBb54yGtu4OFR97TFcSwtw
 MAGENTO_LOCALE=en_US
 MAGENTO_CURRENCY=USD
-MAGENTO_TIMEZONE=America/New_York
+MAGENTO_TIMEZONE=America/Los_Angeles
