--- a/compose/env/db.env
+++ b/compose/env/db.env
@@ -2,7 +2,7 @@ MYSQL_HOST=db
 MYSQL_ROOT_PASSWORD=oVIMcjwoNVqY8nQUqdXXHkc555xEoANDkc3k2
 MYSQL_DATABASE=magento
 MYSQL_USER=magento
-MYSQL_PASSWORD=4FV6oAAj1jnwiXfnDzpz9af7p08gIRvxxRMZt
+MYSQL_PASSWORD=magento
 
 MYSQL_INTEGRATION_ROOT_PASSWORD=magento
 MYSQL_INTEGRATION_DATABASE=magento_integration_tests
